@@ -32,4 +32,4 @@ Text with Java types com.teaminabox.foo.BigClass and an inner class com.teaminab
 
 A [forced link] and one to an existing page: [wards browser content renderer test]
 
-Bug: [ 1490342 ] URL in brackets detected incorrectly: I am sure you have heard of Google (http://www.google.com).
+Bug: 1490342 URL in brackets detected incorrectly: I am sure you have heard of Google (http://www.google.com).
